# METABALL-VirtualAd

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
docs/: PHASE4_AI_KEYER_DESIGN.md  PHASE5_RENDERING_DESIGN.md  PHASE6_INTEGRATION_DESIGN.md  PROJECT_OVERVIEW.md  REQUIREMENTS.md  TECH_STACK.md  WINDOWS_SETUP_GUIDE.md
python/: requirements.txt
python/keyer/: sam_annotation.py  train_segmentation.py
python/training/: dataset.py  evaluate.py  export_onnx.py  models.py  test_dataloader.py  train.py  transforms.py
src/: main.cpp
src/core/: DirectShowCaptureSource.cpp  DirectShowCaptureSource.h  FilePlaybackSource.cpp  FilePlaybackSource.h  FileWriterOutput.cpp  FileWriterOutput.h  FramePipeline.cpp  FramePipeline.h  IVideoOutput.h  IVideoSource.h  WindowPreviewOutput.cpp  WindowPreviewOutput.h
src/inference/: CameraPoseRefiner.cpp  CameraPoseRefiner.h  ONNXInference.cpp  ONNXInference.h  demo_tracking_ai.cpp  test_onnx_inference.cpp  test_pose_refinement.cpp
src/integration/: .gitkeep  FrameData.h  IntegratedPipeline.cpp  IntegratedPipeline.h  PipelineConfig.h  PipelineStatistics.h  ThreadSafeQueue.h  test_integrated_pipeline.cpp  test_integrated_pipeline_video.cpp
src/keyer/: DepthCompositor.cpp  DepthCompositor.h  DepthEstimator.cpp  DepthEstimator.h  SegmentationInference.cpp  SegmentationInference.h  test_depth_compositor.cpp  test_segmentation.cpp
src/rendering/: AdRenderer.cpp  AdRenderer.h  test_ad_renderer.cpp
src/tools/: AnnotationTool.cpp  AnnotationTool.h  annotate_main.cpp
src/tracking/: FeatureDetector.cpp  FeatureDetector.h  FeatureMatcher.cpp  FeatureMatcher.h  FeatureTracker.cpp  FeatureTracker.h  PnPSolver.cpp  PnPSolver.h  test_feature_detection.cpp  test_feature_matching.cpp  test_feature_tracking.cpp
tasks/: todo.md
